# option-block

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md  rustfmt.toml
.github/workflows/: miri.yml  rust.yml
src/: iter.rs  lib.rs  tests.rs
tests/: basic-tests.rs  first-last.rs  has-drop-impl.rs  iterator-correctness.rs
