[package]
name = "option-block"
description = "A minimal utility Rust crate for small, fixed-size blocks of optional types."
version = "0.5.0"
edition = "2024"
rust-version = "1.85.0"
license = "MIT"
authors = ["Basti Ortiz <ortiz@bastidood.dev>"]
categories = ["data-structures", "embedded", "no-std"]
readme = "README.md"
homepage = "https://github.com/BastiDood/option-block"
repository = "https://github.com/BastiDood/option-block"
include = ["src", "tests", "CHANGELOG.md", "LICENSE", "README.md"]
